# cgats

./: .gitignore  Cargo.toml  README.md  build.rs
docs/: .rustc_info.json  index.html
docs/doc/: aliases.js  search-index.js  settings.html  source-files.js
docs/doc/ansi_term/: enum.Color.html  enum.Colour.html  struct.ANSIGenericString.html  struct.ANSIGenericStrings.html  struct.Infix.html  struct.Prefix.html  struct.Style.html  struct.Suffix.html
docs/doc/atty/: enum.Stream.html  fn.is.html  fn.isnt.html
docs/doc/cgats/: CgatsMap.t.html  CgatsValue.t.html  DataColumn.t.html  DataFormat.t.html  DataMap.t.html  RawVec.t.html  all.html  enum.CgatsError.html  enum.CgatsType.html  enum.DataFormatType.html  enum.Error.html  fn.ColorBurstFormat.html  fn.fmt_data_format.html  fn.round_to.html  index.html  macro.err.html  round_to.v.html  sidebar-items.js  struct.Cgats.html  struct.CgatsMap.html  struct.CgatsObject.html  struct.CgatsValue.html  struct.CgatsVec.html  struct.DataSet.html  struct.DeReport.html  struct.MapVec.html  struct.RawVec.html  trait.FromStr.html  type.CgatsResult.html  type.CgatsSet.html  (+8 more)
examples/cgats/: cli.rs  config.rs  main.rs
examples/linviz/: cbdensity.rs  cli.rs  colors.rs  linviz.rs  main.rs
public/: .rustc_info.json
public/doc/: aliases.js  search-index.js
reference/: ISO15339-CRPC1.txt  ISO15339-CRPC2.txt  ISO15339-CRPC3.txt  ISO15339-CRPC4.txt  ISO15339-CRPC5.txt  ISO15339-CRPC6.txt  ISO15339-CRPC7.txt  P2P51.txt
src/: .read.rs.swo  cgats.rs  cgatsmap.rs  cli.rs  compare.rs  config.rs  data_map.rs  data_vec.rs  de_report.rs  delta.rs  error.rs  field.rs  format.rs  lib.rs  main.rs  rawvec.rs  read.rs  sample.rs  test.rs  tests.rs  vendor.rs
test_files/: cgats0.txt  cgats1.tsv  cgats2.tsv  cgats3.tsv  cgats4.tsv  cgats5.tsv  cgats7.tsv  cgats_format.tsv  colorburst0.txt  colorburst0_reindex.txt  colorburst1.lin  colorburst2.lin  colorburst3.lin  curve0.txt  deltae0.txt  dereport0.txt  dereport1.txt  other
(+2453 files in other folders)
