[package]
name = "cgats"
version = "0.1.6-alpha.0"
authors = ["Ryan O'Beirne <ryanobeirne@gmail.com>"]
description = "Parse, transform, and write CGATS color files"
edition = "2018"
license = "GPL-3.0"
homepage = "https://github.com/ryanobeirne/cgats"
repository = "https://github.com/ryanobeirne/cgats.git"
documentation = "https://ryanobeirne.github.io/cgats"
readme = "README.md"

[dependencies]
deltae = "0.1.*"
statistical = "1.0.0"
lab = "0.7.1"

[dev-dependencies]
mktemp = "0.3.1"
clap = "2.32.0"
gnuplot = "0.0.31"
la = "0.2.0"
num = "0.2.0"

[[example]]
name = "cgats"
path = "examples/cgats/main.rs"

[[example]]
name = "linviz"
path = "examples/linviz/main.rs"
