[package]
name = "cgats"
version = "0.1.8-alpha.1"
authors = ["Ryan O'Beirne <ryanobeirne@gmail.com>"]
description = "Parse, transform, and write CGATS color files"
edition = "2018"
license = "GPL-3.0"
homepage = "https://github.com/ryanobeirne/cgats"
repository = "https://github.com/ryanobeirne/cgats.git"
documentation = "https://ryanobeirne.github.io/cgats"
readme = "README.md"

[dependencies]
deltae = "0.1.5"
statistical = "1.0.0"

[dev-dependencies]
mktemp = "0.3.1"
clap = "2.32.0"

[build-dependencies]
rustc_tools_util = "0.2.0"
clap = "2.32.0"

[[example]]
name = "cgats"
path = "examples/cgats/main.rs"